--- a/css/master.css
+++ b/css/master.css
@@ -24,6 +24,10 @@
   border-width: 1px;
   color: #ff7a59;
 }
+
+.col > .btn {
+  text-decoration: none;
+}
 /* fine bottoni */
 /* inizio list item */
 .list {
@@ -33,6 +37,35 @@
   display: inline;
   padding: 0 10px;
 }
+
+.a_normal {
+  color: black;
+}
+
+.list_col {
+  list-style: none;
+  padding: 20px; 0;
+  text-align: left;
+}
+.list_col a {
+  margin: 20px; 0;
+}
+.list_col li span {
+  color: #fff;
+  background-color: #ff7a59;
+  border-radius: 50%;
+  margin-right: 10px;
+  text-align: center;
+  font-size: 10px;
+}
+.list span {
+  color: #fff;
+  background-color: #ff7a59;
+  border-radius: 50%;
+  margin-right: 10px;
+  text-align: center;
+  font-size: 10px;
+}
 /* fine list item */
 
 /* inizio header */
@@ -41,12 +74,11 @@
 .menu_fixed_container {
   width: 100%;
   height: 100px;
-  background-color: green;
+  background-color: #a7c5df;
 }
 .menu_fixed {
   width: 80%;
   margin: 0 auto;
-  background-color: red;
 }
 .menu_fixed a {
   text-decoration: none;
@@ -68,21 +100,19 @@
 /* inizio menu first page */
 .menu_container {
   width: 100%;
-  height: 500px;
-  background-color: yellow;
+  height: 100px;
 }
 .menu_home {
   width: 80%;
   margin: 0 auto;
   height: 100px;
-  background-color: blue;
 }
 .menu_home a {
   text-decoration: none;
 }
 .left_menu,
 .right_menu {
-  padding-top: 50px;
+  padding-top: 40px;
 }
 
 .menu_home .header_logo,
@@ -91,7 +121,7 @@
 }
 .header_logo,
 .header_menu {
-  padding-top: 50px;
+  padding-top: 40px;
 }
 .menu_home .header_logo {
   width: 50%;
@@ -103,11 +133,16 @@
 /* fine menu first page */
 
 /* inizio jumbotron */
+.jumbotron_container {
+  height: 600px;
+  background-image: url("../img/jumbotron.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
 .jumbotron {
   width: 80%;
   margin: 0 auto;
   height: 400px;
-  background-color: pink;
   padding-top: 40px;
 }
 .arrow::after {
@@ -133,6 +168,139 @@
 }
 
 /* fine header */
+
+/* inizio main */
+.light_blue_container {
+  width: 100%;
+  height: 80px;
+  background-color: lightblue;
+  border-color: black;
+  border-width: medium;
+  border-style: solid;
+  border-left: none;
+  border-right: none;
+}
+
+/* inizio section features */
+.main_container {
+  width: 100%;
+  background-color: #f5f8fa;
+}
+.main {
+  width: 50%;
+  margin: 0 auto;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  text-align: center;
+}
+.main > h2 {
+  margin: 20px 0;
+}
+.main > p {
+  line-height: 25px;
+}
+.cube {
+  width: 150px;
+  height: 148px;
+
+}
+
+.float_container {
+  width: 80%;
+  margin: 0 auto;
+}
+.col {
+  background-color: white;
+  text-align: center;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  padding: 20px 20px;
+  box-shadow: 0 0 5px #888888;
+}
+.first_col {
+  width: 100%;
+  margin: 0 auto;
+}
+
+.second_col,
+.third_col,
+.fourth_col {
+  float: left;
+  width: 31.5%;
+  display: inline-block;
+}
+.third_col {
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+.float_container img,
+.float_container h3,
+.float_container p,
+.float_container hr,
+.float_container .btn_col {
+  margin-top: 20px;
+}
+
+.popular {
+  text-transform: uppercase;
+}
+
+.col_img {
+  width: 100px;
+  height: 148px;
+}
+/* fine section features */
+
+/* inizio section learn&growth */
+.learn_growth {
+  width: 100%;
+  background-image: linear-gradient(45deg,#00a4bd,#00bda5);
+}
+.learn_container {
+  width: 80%;
+  margin: 0 auto;
+  padding-top: 40px;
+  color: white;
+  text-align: center;
+}
+.learn_container p {
+  padding-top: 30px;
+}
+
+.table {
+  padding: 30px;
+}
+
+.item {
+  float: left;
+  width: 25%;
+  display: inline-block;
+  padding: 40px;
+}
+.item img {
+  width: 190px;
+  height: 80px;
+}
+
+.first_item,
+.second_item,
+.third_item,
+.fourth_item {
+    border-bottom: 0.5px solid white;
+}
+.second_item,
+.sixth_item,
+.third_item,
+.seventh_item,
+.fourth_item,
+.eighth_item {
+  border-left: 0.5px solid white;
+}
+
+/* fine section learn&growth */
+
+/* fine main */
 
 <!-- definire tramite una classe il modello di box da utilizzare sia in verticale che in orrizontale-->
 
