--- a/css/master.css
+++ b/css/master.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Playfair Display', serif;
 }
 
 .clearfix::after {
@@ -148,6 +149,12 @@
   width: 50%;
   text-align: right;
 }
+
+.globe {
+  height: 15px;
+  width: 15px;
+  margin-right: 10px;
+}
 /* fine menu first page */
 
 /* inizio jumbotron */
@@ -258,6 +265,7 @@
 .fourth_col {
   float: left;
   width: 31.5%;
+  margin-bottom: 40px;
   display: inline-block;
 }
 .third_col {
@@ -353,8 +361,7 @@
   float: left;
   width: 40%;
   height: 400px;
-  margin-top: 40px;
-  margin-bottom: 20px;
+  padding-top: 40px;
 }
 
 .text ul {
