--- a/css/master.css
+++ b/css/master.css
@@ -2,7 +2,6 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Playfair Display', serif;
 }
 
 .clearfix::after {
@@ -38,6 +37,10 @@
 .down {
   transform: rotate(45deg);
   -webkit-transform: rotate(45deg);
+}
+
+#globe {
+  padding-right: 10px;
 }
 /* fine freccie */
 
